<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:foregroundTint="#D5B4B4"
    android:visibility="visible"
    tools:context=".CreateEvent">

    <TextView
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_an_event"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:orientation="vertical"
        android:id = "@+id/event_text_box"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/event_title"
        android:background = "@color/base"
        >

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:inputType = "text"
            android:hint="Event Name" />
        <EditText
            android:id = "@+id/event_class_capacity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:inputType = "text"
            android:hint ="Class Capacity (53)"/>
        <EditText
            android:id = "@+id/event_waitlist_capacity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:inputType = "text"
            android:hint ="Waitlist Capacity (#)"/>
        <EditText
            android:id = "@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:inputType = "text"
            android:hint ="Event Date(dd-MM-yyyy)"/>
        <EditText
            android:id = "@+id/event_time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:inputType = "text"
            android:hint ="Event Time (4:00pm)"/>
        <EditText
            android:id = "@+id/event_instructor"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:inputType = "text"
            android:hint ="Instructor Name"/>
        <EditText
            android:id = "@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:inputType = "text"
            android:hint ="Description"/>

        <CheckBox
            android:id="@+id/event_geolocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Enable Geolocation?"
            app:centerIfNoTextEnabled="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_text_box"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/UpdatePoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.3"
            android:backgroundTint="@color/button"
            android:elevation="10dp"
            android:fadingEdge="horizontal"
            android:stateListAnimator="@null"
            android:text="Update Poster"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_text_box" />

        <Button
            android:id="@+id/event_delete_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:layout_weight="0.3"
            android:backgroundTint="@color/button"
            android:elevation="10dp"

            android:fadingEdge="horizontal"
            android:stateListAnimator="@null"

            android:text="Delete Event"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_text_box"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_text_box"
        android:layout_marginTop="150dp">

        <Button
            android:id="@+id/event_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.3"
            android:backgroundTint="@color/button"
            android:elevation="10dp"
            android:fadingEdge="horizontal"
            android:stateListAnimator="@null"
            android:text="BACK"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_text_box" />

        <Button
            android:id="@+id/event_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:layout_weight="0.3"
            android:backgroundTint="@color/button"
            android:elevation="10dp"

            android:fadingEdge="horizontal"
            android:stateListAnimator="@null"

            android:text="CONFIRM"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_box"

            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>