<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:foregroundTint="#D5B4B4"
    android:visibility="visible">

    <TextView
        android:id="@+id/create_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_an_organizer_profile"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id = "@+id/create_ellipse"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toBottomOf="@id/create_title"
        app:layout_constraintBottom_toTopOf="@id/create_text_box"
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height= "150dp"
        android:paddingTop="10dp"
        android:background = "@color/background"
        android:src = "@drawable/ellipse_30" />
    
    <ImageView
        android:id = "@+id/person_fig"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toBottomOf="@id/create_title"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height= "75dp"
        android:paddingTop="10dp"
        android:src = "@drawable/image_193" />
    
    <LinearLayout
        android:orientation="vertical"
        android:id = "@+id/create_text_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/create_ellipse"
        android:background = "@color/base"
        >

        <EditText
            android:id="@+id/create_Name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:autofillHints="yes"
            android:inputType = "text"
            android:hint ="Business Name" />
        <EditText
            android:id = "@+id/create_location"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:autofillHints="yes"
            android:inputType = "text"
            android:hint ="@string/location"/>
        <EditText
            android:id = "@+id/create_contact_info"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:autofillHints="yes"
            android:inputType = "text"
            android:hint ="@string/phone_number_780_289_1234"/>
        <EditText
            android:id = "@+id/create_facility_details"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:autofillHints="yes"
            android:inputType = "text"
            android:hint ="@string/facility_details"/>
        <EditText
            android:id = "@+id/create_accessibility"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="yes"
            android:ems="30"
            android:inputType = "text"
            android:hint ="@string/accessibilty_status_yes_with_ramps_etc"/>
        <EditText
            android:id="@+id/create_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:autofillHints="yes"
            android:inputType = "text"
            android:hint ="Email  Address (abc@gmail.com)" />
        <EditText
            android:id="@+id/create_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:autofillHints="yes"
            android:inputType = "text"
            android:hint ="Username" />
        <EditText
            android:id="@+id/create_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="30"
            android:autofillHints="yes"
            android:inputType = "text"
            android:hint ="Password" />
    </LinearLayout>

    <Button
        android:id="@+id/create_confirm_button"
        android:layout_width="150dp"
        android:layout_height="79dp"

        android:elevation="10dp"
        android:stateListAnimator="@null"

        android:backgroundTint="@color/button"
        android:fadingEdge="horizontal"
        android:text="@string/confirm"
        android:textSize = "18sp"
        android:textColor="@color/black"
        app:cornerRadius="7dp"

        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="25dp"
         />
    <Button
        android:id="@+id/create_back_button"
        android:layout_width="150dp"
        android:layout_height="79dp"

        android:elevation="10dp"
        android:stateListAnimator="@null"

        android:layout_marginTop="120dp"
        android:backgroundTint="@color/button"
        android:fadingEdge="horizontal"
        android:text="BACK"
        android:textSize = "18sp"
        android:textColor="@color/black"
        app:cornerRadius="7dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom= "50dp"
        android:layout_marginStart = "25dp"

        tools:ignore="HardcodedText" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background = "@color/base"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id = "@+id/create_house"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src = "@drawable/image_163"
            android:contentDescription="Button"
            android:background="@color/base"
            android:layout_alignParentStart="true"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/create_search"
            android:layout_width="54dp"
            android:layout_height="48dp"
            android:background="@color/base"
            android:contentDescription="Button"
            android:src="@drawable/image_164"
            android:layout_centerHorizontal="true"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id = "@+id/create_person"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/base"
            android:contentDescription="Button"
            android:src = "@drawable/profile_icon_tiny"
            android:layout_alignParentEnd="true"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>