...
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/welcome_home"
        android:layout_width="300dp"
        android:layout_height="79dp"
        android:backgroundTint="#F5EBEB"
        android:fontFamily="@font/yaldevi_semibold"
        android:text="HOME"
        android:textColor="#000000"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CREATE_FACILITY"
        android:layout_width="300dp"
        android:layout_height="76dp"
        android:backgroundTint="#F5EBEB"
        android:fontFamily="@font/yaldevi_semibold"
        android:text="CREATE A FACILITY"
        android:textColor="#000000"
...
